#699- Added Scrolling design and some overflow issue fix.

--- a/player/public/css/app/style.css
+++ b/player/public/css/app/style.css
@@ -618,16 +618,34 @@ ion-popover-view.fit ion-content {
 
 .credit-body-icon-font {
     width: 82%;
-    overflow-y:scroll;
-    overflow-x: hidden; 
-   word-wrap: break-word;
+   /* overflow-y:scroll;
+    overflow-x: hidden; */
+    word-wrap: break-word;
     height: 75%;
     left: 10%;
     position: absolute;
-    font-family: NotoSansRegular;
+    font-family: baloobhai;
     font-size: 0.7em;
-
+    overflow-y: auto;
+    overflow-x:hidden;
     
+}
+.credit-body-icon-font::-webkit-scrollbar {
+    width: 3%;
+    border-radius: 30%;
+}
+.credit-body-icon-font::-webkit-scrollbar-track {
+    background-color: #ffd18f;
+   /* border-left: 1px solid #f6661f;*/
+    border-radius: 10%;
+}
+.credit-body-icon-font::-webkit-scrollbar-thumb {
+    background-color: #f6661f;
+    border-radius: 35%;
+}
+.credit-body-icon-font::-webkit-scrollbar-thumb:hover {
+  background-color: #f6661f;
+  border-radius: 10%;
 }
 
 .credit-body-icon-font table{
@@ -639,7 +657,7 @@ ion-popover-view.fit ion-content {
 .credit-body-icon-font tbody{
     height: 100%;
     overflow: auto;
-    display: inline-block;
+    /*display: inline-block;*/
 }
 
 .gc-cp-coll{
@@ -1008,7 +1026,7 @@ ion-popover-view.fit ion-content {
     padding: 3% 5%;
     border-bottom: solid #4FD3F6;
     border-width: 2px;
-    color:#00d2ff;
+    color:#0097D2;
     text-transform: uppercase;
 }
 .gc-popup-body-new{
@@ -1070,8 +1088,9 @@ ion-popover-view.fit ion-content {
 
 .credits-data {
     width: 100%;
-    font-size: 1em;
+    font-size: 1.2em;
     padding: 2%;
+    text-align: center;
 }
 
 .gc-restart-cont {
